<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/a_constrain_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttackActivity">

    <TextView
        android:id="@+id/a_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        android:padding="16dp"
        android:text="@string/your_turn"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/a_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a_title">

        <ImageView
            android:id="@+id/a_game_field"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/gamefield"
            app:srcCompat="@drawable/gamefield" />

        <ImageView
            android:id="@+id/a_foresight"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_below="@+id/a_game_field"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/foresight"
            android:contentDescription="@string/foresight" />

        <Button
            android:id="@+id/a_fireBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/a_game_field"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorAccent"
            android:text="@string/fire"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>